fix small screen overflow issue

--- a/style.css
+++ b/style.css
@@ -397,7 +397,6 @@ footer > nav > a:hover {
 
 	header > nav,
 	footer > nav {
-		max-width: 100vw;
 		flex-direction: column;
 		gap: 2rem;
 		padding: 2rem;
